fix(global/css): Prevent body to overflow by default

--- a/src/global/css/main.scss
+++ b/src/global/css/main.scss
@@ -8,4 +8,5 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
